Replace Prayer Tools with the App's name defined in .env
