# server/routes/_scalar.get.ts
@@ -1,10 +1,13 @@
 export default defineEventHandler(() => {
+  const config = useRuntimeConfig()
+  const appName = config.appName || 'Base'
+
   return `<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Prayer Tools API - Scalar</title>
+    <title>${appName} API - Scalar</title>
   </head>
   <body>
     <script
